<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="151dp"
        android:layout_height="108dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/nature_image"
        android:src="@drawable/music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:text="@string/let_s_you_in"
        android:textColor="@color/black"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fbBtn"
        android:layout_width="317dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_facebook"
        android:paddingStart="50dp"
        android:paddingEnd="30dp"
        android:text="@string/continue_with_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleBtn"
        android:layout_width="317dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_google"
        android:paddingStart="50dp"
        android:paddingEnd="30dp"
        android:text="@string/continue_with_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fbBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appleBtn"
        android:layout_width="317dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_apple"
        android:paddingStart="50dp"
        android:paddingEnd="30dp"
        android:text="@string/continue_with_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleBtn" />

    <View
        android:id="@+id/view"
        android:layout_width="170dp"
        android:layout_height="2dp"
        android:layout_marginTop="60dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appleBtn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="22dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/appleBtn" />

    <View
        android:layout_width="170dp"
        android:layout_height="2dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:background="@color/black"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appleBtn">
    </View>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_style"
        android:text="@string/sign_in_with_password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"></androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textV2"
        android:layout_width="281dp"
        android:layout_height="32dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn"></androidx.appcompat.widget.AppCompatTextView>


</androidx.constraintlayout.widget.ConstraintLayout>